first batch of OD's comments

--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -21,13 +21,13 @@ us how good or how bad our translation models are.
 
 Chapter \ref{chap:nat} walks us through the research on \ac{nat}. We explain
 the principal differences between \acl{ar} and \acl{nar} models, what issues
-arise when using the latter, and how can we solve them. We provide a
+arise when using the latter, and how we can solve them. We provide a
 comprehensive survey of the literature, owing to the fact that the whole domain
 of \ac{nat} resarch is fairly new. We describe efforts to keep the most
-important feature \ac{nat} models -- high decoding speed -- intact by
+important feature of \ac{nat} models -- high decoding speed -- intact by
 introducing constraints on the training process, or other efforts that
 partially sacrifice the higher decoding speed for better translation quality by
-iterative refinement. \JH{In the end of the chapter, we discuss some of the
+iterative refinement. \JH{At the end of the chapter, we discuss some of the
   weaknesses which are prevalent in a large part of the literature on this
   topic. }
 
