--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -1,9 +1,214 @@
 
 * Translation Quality on WMT 21 test set
 
+  Data source:
+  Teacher models: ~/wmt21/teachers/continued_on_parallel
+  Student models: ~/wmt21/efficiency
+
+  Each dir contains a results/ folder, containing the translations and the scores.
+  Ensembles are out of 4 models, single models are en-de_1 or de-en_1.
+
+
+
+
+
+
+
+
+** English-German
+
+   #+NAME: endetrqual
+   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
+   | Model                     | ChrF A | ChrF C | ChrF D | ChrF Avg | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
+   | Single greedy AR          |        |        |        |          |         |         |         |           |      |          |
+   | Large                     |   56.4 |   61.0 |   60.1 |     59.2 |  0.3801 |  0.4341 |  0.4189 |    0.4110 | 50.5 |      1.3 |
+   | Base                      |   55.6 |   59.9 |   58.9 |     58.1 |  0.3594 |  0.4088 |  0.3962 |    0.3881 | 47.9 |      1.3 |
+   |                           |        |        |        |          |         |         |         |           |      |          |
+   | Single beam AR            |        |        |        |          |         |         |         |           |      |          |
+   | Large                     |   56.1 |   60.5 |   59.8 |     58.8 |  0.3770 |  0.4257 |  0.4133 |    0.4053 | 50.8 |      1.3 |
+   | Base                      |   55.4 |   59.7 |   58.6 |     57.9 |  0.3598 |  0.4067 |  0.3955 |    0.3873 | 48.0 |      1.3 |
+   |                           |        |        |        |          |         |         |         |           |      |          |
+   | Ensemble beam AR          |        |        |        |          |         |         |         |           |      |          |
+   | Large                     |   56.5 |   61.4 |   60.5 |     59.5 |  0.4015 |  0.4571 |  0.4411 |    0.4332 | 52.2 |      1.3 |
+   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
+   | Non-autoregressive models |        |        |        |          |         |         |         |           |      |          |
+   | Large                     |   55.9 |   60.5 |   59.4 |     58.6 |  0.1155 |  0.1756 |  0.1544 |    0.1485 | 47.8 |      1.2 |
+   | Base                      |   54.1 |   58.0 |   56.7 |     56.3 | -0.0753 | -0.0282 | -0.0528 |   -0.0521 | 41.8 |      1.1 |
+   | Small                     |   54.0 |   57.9 |   56.8 |     56.2 | -0.1024 | -0.0500 | -0.0731 |   -0.0752 | 41.9 |      1.1 |
+   | Micro                     |   55.1 |   58.9 |   57.8 |     57.3 | -0.0338 |  0.0159 | -0.0071 |   -0.0083 | 43.5 |      1.1 |
+   | Tiny                      |   51.8 |   55.0 |   54.0 |     53.6 | -0.3538 | -0.3116 | -0.3346 |   -0.3333 | 34.7 |      1.0 |
+   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
+   #+TBLFM: $5=vmean($2..$4);%0.1f
+   #+TBLFM: $9=vmean($6..$8);%0.4f
+
+*** Export
+
+   |---------------------------+----------+-----------+------+----------|
+   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+----------+-----------+------+----------|
+   | Single greedy AR          |          |           |      |          |
+   | Large                     |     59.2 |    0.4110 | 50.5 |      1.3 |
+   | Base                      |     58.1 |    0.3881 | 47.9 |      1.3 |
+   |                           |          |           |      |          |
+   | Single beam AR            |          |           |      |          |
+   | Large                     |     58.8 |    0.4053 | 50.8 |      1.3 |
+   | Base                      |     57.9 |    0.3873 | 48.0 |      1.3 |
+   |                           |          |           |      |          |
+   | Ensemble beam AR          |          |           |      |          |
+   | Large                     |     59.5 |    0.4332 | 52.2 |      1.3 |
+   |---------------------------+----------+-----------+------+----------|
+   | Non-autoregressive models |          |           |      |          |
+   | Large                     |     58.6 |    0.1485 | 47.8 |      1.2 |
+   | Base                      |     56.3 |   -0.0521 | 41.8 |      1.1 |
+   | Small                     |     56.2 |   -0.0752 | 41.9 |      1.1 |
+   | Micro                     |     57.3 |   -0.0083 | 43.5 |      1.1 |
+   | Tiny                      |     53.6 |   -0.3333 | 34.7 |      1.0 |
+   |---------------------------+----------+-----------+------+----------|
+
+
+
+** German-English
+
+   #+NAME: deentrqual
+   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
+   | Model                     | ChrF A | Chrf B | ChrF Avg | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
+   | Single greedy AR          |        |        |          |         |         |           |      |          |
+   | Large                     |   60.2 |   63.5 |     61.9 |  0.5789 |  0.5947 |    0.5868 | 48.4 |      1.3 |
+   | Base                      |   59.5 |   62.4 |     61.0 |  0.5447 |  0.5616 |    0.5532 | 47.0 |      1.3 |
+   |                           |        |        |          |         |         |           |      |          |
+   | Single beam AR            |        |        |          |         |         |           |      |          |
+   | Large                     |   59.9 |   63.1 |     61.5 |  0.5777 |  0.5992 |    0.5885 | 49.2 |      1.2 |
+   | Base                      |   59.4 |   62.0 |     60.7 |  0.5453 |  0.5616 |    0.5534 | 47.4 |      1.3 |
+   |                           |        |        |          |         |         |           |      |          |
+   | Ensemble beam AR          |        |        |          |         |         |           |      |          |
+   | Large                     |   60.3 |   63.8 |     62.0 |  0.5818 |  0.6090 |    0.5954 | 50.6 |      1.3 |
+   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
+   | Non-autoregressive models |        |        |          |         |         |           |      |          |
+   | Large                     |   60.3 |   63.0 |     61.6 |  0.3207 |  0.3385 |    0.3296 | 46.4 |      1.4 |
+   | Base                      |   60.1 |   62.7 |     61.4 |  0.2923 |  0.2991 |    0.2957 | 45.8 |      1.3 |
+   | Small                     |   59.9 |   62.2 |     61.0 |  0.2420 |  0.2503 |    0.2462 | 44.6 |      1.3 |
+   | Micro                     |   58.5 |   60.8 |     59.6 |  0.1466 |  0.1485 |    0.1475 | 42.3 |      1.4 |
+   | Tiny                      |   55.2 |   56.5 |     55.9 | -0.1539 | -0.1578 |   -0.1558 | 34.4 |      1.3 |
+   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
+   #+TBLFM: $4=vmean($2..$3);%0.1f
+   #+TBLFM: $7=vmean($5..$6);%0.4f
+
+
+*** Export
+   |---------------------------+----------+-----------+------+----------|
+   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+----------+-----------+------+----------|
+   | Single greedy AR          |          |           |      |          |
+   | Large                     |     61.9 |    0.5868 | 48.4 |      1.3 |
+   | Base                      |     61.0 |    0.5532 | 47.0 |      1.3 |
+   |                           |          |           |      |          |
+   | Single beam AR            |          |           |      |          |
+   | Large                     |     61.5 |    0.5885 | 49.2 |      1.2 |
+   | Base                      |     60.7 |    0.5534 | 47.4 |      1.3 |
+   |                           |          |           |      |          |
+   | Ensemble beam AR          |          |           |      |          |
+   | Large                     |     62.0 |    0.5954 | 50.6 |      1.3 |
+   |---------------------------+----------+-----------+------+----------|
+   | Non-autoregressive models |          |           |      |          |
+   | Large                     |     61.6 |    0.3296 | 46.4 |      1.4 |
+   | Base                      |     61.4 |    0.2957 | 45.8 |      1.3 |
+   | Small                     |     61.0 |    0.2462 | 44.6 |      1.3 |
+   | Micro                     |     59.6 |    0.1475 | 42.3 |      1.4 |
+   | Tiny                      |     55.9 |   -0.1558 | 34.4 |      1.3 |
+   |---------------------------+----------+-----------+------+----------|
+
+
+* Translation on WMT 14
+
+  |-------+---+---|
+  | Model |   |   |
+  |       |   |   |
+
+
+* Decoding speed on efficiency data
+
+  Is tied faster than non-tied?
+
+  1M sentences
+
+** CPU - IceLake
+
+*** Latency
+
+  |---------+----------------------+------------------------|
+  | Model   | Latency - CPU 1 Core | Latency - CPU 36 cores |
+  |---------+----------------------+------------------------|
+  | AR Big  |                      |                        |
+  | AR Base |                      |                        |
+  |---------+----------------------+------------------------|
+  | Large   |                      |                        |
+  | Base    |                      |                        |
+  | Small   |                      |                        |
+  | Micro   |                      |                        |
+  | Tiny    |                      |                        |
+  |---------+----------------------+------------------------|
+
+*** Throughput
+
+  Different batch sizes on 36 cores
+
+  |----------+-----+------+------+------+-------+-------|
+  | Model    | b=8 | b=16 | b=32 | b=64 | b=128 | b=256 |
+  |----------+-----+------+------+------+-------+-------|
+  | AR Base  |     |      |      |      |       |       |
+  |----------+-----+------+------+------+-------+-------|
+  | NAR Base |     |      |      |      |       |       |
+  |----------+-----+------+------+------+-------+-------|
+
+** GPU
+
+*** Latency
+
+    |---------+---------------------+---------------------|
+    | Model   | GPU Latency -- P100 | GPU Latency -- A100 |
+    |---------+---------------------+---------------------|
+    | AR Big  |                     |                     |
+    | AR Base |                     |                     |
+    |---------+---------------------+---------------------|
+    | Large   |                     |                     |
+    | Base    |                     |                     |
+    | Small   |                     |                     |
+    | Micro   |                     |                     |
+    | Tiny    |                1916 |                     |
+    |---------+---------------------+---------------------|
+
+*** Throughput
+
+    P100
+
+  |---------+------+------+------+------+------+------+-------|
+  | Model   |  b=1 |  b=4 |  b=8 | b=16 | b=32 | b=64 | b=128 |
+  |---------+------+------+------+------+------+------+-------|
+  | AR Base |      |      |      |      |      |      |       |
+  |---------+------+------+------+------+------+------+-------|
+  | Large   |      |      |      |      |      |      |       |
+  | Base    |      |      | 3146 | 2769 | 2535 | 2394 |       |
+  | Small   |      | 2376 | 1977 | 1748 | 1635 | 1564 |       |
+  | Micro   |      | 1871 | 1579 | 1418 | 1343 | 1282 |       |
+  | Tiny    | 1916 |  960 |  803 |  730 |  687 |  666 |       |
+  |---------+------+------+------+------+------+------+-------|
+
+
+
+
+* Old stuff
+  The NAT models in these tables are with max-length set to 100. AR models are
+  with max length 150. Boooo
+
+  Also, the real problem was not the max length, but the batch size - with
+  batch > 1, the sentences got decoded to the max length, instead of 3x src
+  length.
+
+** English-German
   |-------------------+---------------------------+---------------------------------------+------------|
-  | Model             | En -> De                  |                                       |            |
-  |                   | Chrf                      | COMET                                 | BLEU       |
+  | EN -> DE          | Chrf                      | COMET                                 | BLEU       |
   |-------------------+---------------------------+---------------------------------------+------------|
   | Single Greedy AR  |                           |                                       |            |
   | Large             | 56.4 / 61.0 / 60.1 = 59.2 | 0.3801 / 0.4341 / 0.4189 = 0.4110     | 50.5 @ 1.3 |
@@ -24,9 +229,9 @@
   | Tiny              | 51.8 / 55.0 / 53.9 = 53.6 | -0.4170 / -0.3760 / -0.3983 = -0.3971 | 34.5 @ 1.0 |
   |-------------------+---------------------------+---------------------------------------+------------|
 
-
+** German-English
   |-------------------+--------------------+-----------------------------+------------|
-  | Model             | Chrf               | COMET                       | BLEU       |
+  | DE -> EN          | Chrf               | COMET                       | BLEU       |
   |-------------------+--------------------+-----------------------------+------------|
   | Single Greedy AR  |                    |                             |            |
   | Large             | 60.2 / 63.5 = 61.9 | 0.5789 / 0.5947 = 0.5868    | 48.4 @ 1.3 |
@@ -46,11 +251,3 @@
   | Micro             | 58.4 / 60.7 = 59.6 | +0.1151 / +0.1186 = +0.1169 | 41.8 @ 1.3 |
   | Tiny              | 55.1 / 56.4 = 55.8 | -0.1785 / -0.1815 = -0.1800 | 34.2 @ 1.3 |
   |-------------------+--------------------+-----------------------------+------------|
-
-  ** Teacher ensembles
-  ~/wmt21/teachers
-  ~/wmt21/efficiency
-
-
-
-* Translation on WMT 14
