second batch of OD's comments

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -20,6 +20,7 @@
 \newacronym{comet}{COMET}{Crosslingual Optimized Metric for Evaluation of Translation}
 \newacronym{crf}{CRF}{conditional random fields}
 \newacronym{ctc}{CTC}{connectionist temporal classification}
+\newacronym{disco}{DisCo}{disentangled context}
 \newacronym{em}{EM}{expectation-maximization}
 \newacronym{glat}{GLAT}{Glancing Transformer}
 \newacronym{gru}{GRU}{Gated Recurrent Unit}
